# patch_morphology

./: CMakeLists.txt  README.md
legacy/: CMakeLists.txt  utils.h  volume_patches.cpp
scripts/: CMakeLists.txt  hcag_segmentation_pipeline.pl  miccai2012_segmentation_minipipe.pl  patch_segmentation_pipeline.pl  snipe_grading_pipeline.pl  ventricles_segmentation_pipeline.pl
src/: CMakeLists.txt  itk_levelset_segment.cpp  itk_merge_discrete_labels.cpp  itk_merge_labels.cpp  itk_minc_nonlocal_filter.cpp  itk_patch_grading.cpp  itk_patch_morphology.cpp  itk_patch_morphology_mc.cpp  itk_patch_normalization.cpp  itk_patch_segmentation.cpp  itk_split_labels.cpp
src/itk/: itkAdaptativeNonLocalFilter.h  itkAdaptativeNonLocalFilter.txx  itkClassicalNonLocalFilter.h  itkClassicalNonLocalFilter.txx  itkEXPSimilarityGrading.h  itkEXPSimilarityLabelling.h  itkEXPStats.h  itkGradingNonLocalFilter.h  itkGradingNonLocalFilter.txx  itkHelpers.h  itkL1PatchDistance.h  itkL2PatchDistance.h  itkLabelDistance.h  itkLocalMeanFilter.h  itkLocalMeanFilter.txx  itkLocalSDFilter.h  itkLocalSDFilter.txx  itkMeanWeightNonLocalFilter.h  itkMeanWeightNonLocalFilter.txx  itkMedianDistanceNonLocalFilter.h  itkMedianDistanceNonLocalFilter.txx  itkMedianWeightedAverageLabeling.h  itkMedianWeightedDiscreteLabeling.h  itkMinWeightedAverageLabeling.h  itkMinWeightedDiscreteLabeling.h  itkMinimalDistanceNonLocalFilter.h  itkMinimalDistanceNonLocalFilter.txx  itkNNLSRegressionGrading.h  itkNNLSRegressionLabelling.h  itkNoiseMedianDistanceNonLocalFilter.h  itkNoiseMedianDistanceNonLocalFilter.txx  itkNonLocalPatchesFilter.h  itkNonLocalPatchesFilter.txx  itkNormalizationNonLocalFilter.h  itkNormalizationNonLocalFilter.txx  itkNormalizationProcess.h  itkPatchCostFunction.h  itkPatchDistance.h  itkPreselectionFilter.h  itkRegressionNonLocalFilter.h  (+11 more)
testdir/: CMakeLists.txt  test_anlm.sh  test_grading.sh  test_label_merge.sh  test_label_split.sh  test_nlm.sh  test_segmentation.sh  test_std_nlm.sh
