# Vladimir S. FONOV - vladimir.fonov@gmail.com
# 
PROJECT (PATCH_MORPHOLOGY)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
if(COMMAND cmake_policy)
 cmake_policy(SET CMP0003 OLD)
endif(COMMAND cmake_policy)

IF(NOT MINC_TOOLKIT_BUILD)
  FIND_PACKAGE(ITK REQUIRED)
  
  OPTION(PATCH_MORPHOLOGY_BUILD_LEGACY    "Build legacy program volume_patchs, requires LIBMINC" OFF)
ELSE()
  SET(PATCH_MORPHOLOGY_BUILD_LEGACY ON)  
ENDIF(NOT MINC_TOOLKIT_BUILD)


INCLUDE(${ITK_USE_FILE})
INCLUDE_DIRECTORIES(${ITK_INCLUDE_DIRS})  
LINK_DIRECTORIES(${ITK_LIBRARY_DIRS})


add_subdirectory(src)
add_subdirectory(scripts)

IF(PATCH_MORPHOLOGY_BUILD_LEGACY)
  add_subdirectory(legacy)
ENDIF(PATCH_MORPHOLOGY_BUILD_LEGACY)
