# Vladimir S. FONOV - vladimir.fonov@gmail.com
# 
PROJECT (PATCH_MORPHOLOGY)
ENABLE_TESTING()

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
if(COMMAND cmake_policy)
 cmake_policy(SET CMP0003 OLD)
endif(COMMAND cmake_policy)

IF(NOT MINC_TOOLKIT_BUILD)
  FIND_PACKAGE(ITK REQUIRED)
  OPTION(USE_BLAS    "Use BLAS" OFF)
  
  IF(USE_BLAS)
    set(BLA_VENDOR OpenBLAS) # search for OpenBlas for now
    find_package(BLAS)
  ENDIF()
  OPTION(PATCH_MORPHOLOGY_BUILD_LEGACY    "Build legacy program volume_patchs, requires LIBMINC" OFF)
ELSE()
  SET(PATCH_MORPHOLOGY_BUILD_LEGACY ON)
ENDIF()


IF(USE_BLAS AND BLAS_FOUND)
  SET(HAVE_OPENBLAS ON)
    ADD_DEFINITIONS(-DHAVE_OPENBLAS -DUSE_SPAMS)
  SET(HAVE_OPENBLAS ON)
  message("Building with BLAS")
ELSE()
 SET(HAVE_OPENBLAS OFF)
 message("Building without BLAS")
ENDIF() 

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

INCLUDE(${ITK_USE_FILE})
INCLUDE_DIRECTORIES(${ITK_INCLUDE_DIRS})  
LINK_DIRECTORIES(${ITK_LIBRARY_DIRS})

add_subdirectory(src)
add_subdirectory(scripts)

IF(PATCH_MORPHOLOGY_BUILD_LEGACY)
  add_subdirectory(legacy)
ENDIF(PATCH_MORPHOLOGY_BUILD_LEGACY)

IF(BUILD_TESTING)
  ADD_SUBDIRECTORY(testdir)
ENDIF(BUILD_TESTING)
